finder-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: finder-service
  name: finder-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finder-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: finder-service
    spec:
      containers:
      - image: gcr.io/PROJECT_ID/IMAGE:TAG
        imagePullPolicy: IfNotPresent
        name: finder-service
      restartPolicy: Always
