finder-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: finder-service
  name: finder-service
  namespace: default
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: finder-service
  sessionAffinity: None
  type: NodePort
