finder-service/load-balancer.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: load-balancer
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /finder
        backend:
          serviceName: finder-service
          servicePort: 3001
